# GOT-OCR2.0

./: README.md
GOT-OCR-Fastapi/: README.md  pyproject.toml  start_app.py
GOT-OCR-Fastapi/app/: client.py  server.py
